# discord-channel-migrator

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
src/: channel.rs  identification.rs  main.rs  messages.rs  tests.rs  threads.rs  transferrer.rs
