[package]
name = "discord-channel-migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.31"
serenity = { path = "./deps/serenity", features = ["http"] }
regex = "1.11.2"
