[package]
name = "discord-channel-migrator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tokio = { version = "1.47.1", default-features = false, features = ["rt", "rt-multi-thread", "macros"] }
serenity.path = "./deps/serenity"
anyhow = "1.0.99"
